minor spacing tweak that was bugging me

--- a/css/ui/base.css
+++ b/css/ui/base.css
@@ -350,6 +350,10 @@ Y88b  d88PY88b. Y88..88P888    888Y8b.         X88
 			margin-top: 0;
 		}
 
+	.passage .passageBody h2 {
+		margin-top: 0;
+	}
+
 
 
 
